・フィルター実装 ・掲示板の表示などを微修正
そろそろこのブランチをマスターとマージしてもいいのでは

--- a/static/css/wgb.css
+++ b/static/css/wgb.css
@@ -1,4 +1,9 @@
 [class^="card member"] {
   opacity:  1;
-  transition: 0.25s;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+}
+
+a[class="back-blue"] {
+    color:orange;
 }
