iconの置き場とファイルアップロードの方法を調べればOK あとはJavaScriptの凡ミス修正

--- a/templates/thread.html
+++ b/templates/thread.html
@@ -73,7 +73,7 @@
                         <div class="card-title">書き込みフォーム</div>
                         <div class="card-subtitle"><span class="text-danger">{{ form.non_field_errors }}</span></div>
                         <div>  {# 文字装飾ボタン #}
-                            <button type="button" onclick="add_decorate_tag('%b, 'sentence')" title="大きい文字"><span style="font-size:large;" >あ</span></button>
+                            <button type="button" onclick="add_decorate_tag('%b', 'sentence')" title="大きい文字"><span style="font-size:large;" >あ</span></button>
                             <button type="button" onclick="add_decorate_tag('%s', 'sentence')" title="小さい文字"><span style="font-size:x-small;">あ</span></button>
                             <button type="button" onclick="add_decorate_tag('%bl', 'sentence')" title="太い文字"><span style="font-weight:bold;">あ</span></button>
                             <button type="button" onclick="add_decorate_tag('%st', 'sentence')" title="取り消し線"><span style="text-decoration: line-through;">あ</span></button>
