--- a/templates/create_thread.html
+++ b/templates/create_thread.html
@@ -25,7 +25,7 @@
                     <div class="py-2">{{form.password2}}{{form.password2.error}}</div>
                     <div class="card-text py-2">{{form.first_write.label}}</div>
                     <div>  {# 文字装飾ボタン #}
-                        <button type="button" onclick="add_decorate_tag('%b, 'first_write')" title="大きい文字"><span style="font-size:large;" >あ</span></button>
+                        <button type="button" onclick="add_decorate_tag('%b', 'first_write')" title="大きい文字"><span style="font-size:large;" >あ</span></button>
                         <button type="button" onclick="add_decorate_tag('%s', 'first_write')" title="小さい文字"><span style="font-size:x-small;">あ</span></button>
                         <button type="button" onclick="add_decorate_tag('%bl', 'first_write')" title="太い文字"><span style="font-weight:bold;">あ</span></button>
                         <button type="button" onclick="add_decorate_tag('%st', 'first_write')" title="取り消し線"><span style="text-decoration: line-through;">あ</span></button>
