--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>WorewolfGameBBS</title>
+    <title>WerewolfGameBBS</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/wgb.css' %}" />
     <link rel="stylesheet" href="{% static 'jqueryui/css/jquery-ui.min.css' %}" />
@@ -18,7 +18,7 @@
 <body class="bg-secondary" onload="{% block onload %}{% endblock %}">
     <!-- ナビバー -->
     <nav class="navbar navbar-expand-md navbar-light bg-warning">
-        <a class="navbar-brand" href="{% url 'WGB:top' %}">WorewolfGameBBS</a>
+        <a class="navbar-brand" href="{% url 'WGB:top' %}">WerewolfGameBBS</a>
         <span>ようこそ&nbsp;
         {% if user.is_authenticated %}
             <img src="{{ user.icon.url }}" style="width:30px; height:30px; border:solid 1px #ffffff; border-radius: 3px;">
