ユーザ情報画面、書き込みプレビュー画面 Bootstrap適切に扱う レスポンシブ対応（やりかけ）

--- a/static/css/wgb.css
+++ b/static/css/wgb.css
@@ -1,4 +1,4 @@
-[class^="card member"] {
+[class^="media member"] {
   opacity:  1;
   transition: 0.5s;
   -webkit-transition: 0.5s;
@@ -6,4 +6,10 @@
 
 a[class="back-blue"] {
     color:orange;
+}
+
+input[type="file"] {
+    width: 300px;
+    height: 30px;
+    font-size:12px;
 }
