--- a/templates/create_thread.html
+++ b/templates/create_thread.html
@@ -8,7 +8,8 @@
 {% endblock %}
 {% block content %}
 <div>
-    <form action="{% url 'WGB:exe_create_thread' %}" method="post" enctype="multipart/form-data">
+    <form action="{% url 'WGB:exe_create_thread' %}" method="post">
+<!--    <form action="{% url 'WGB:exe_create_thread' %}" method="post" enctype="multipart/form-data">-->
         {% csrf_token %}
         <div class="col-md-8 offset-md-2">
             <div class="card">
@@ -34,9 +35,9 @@
                     </div>
                     <div class="py-2">{{form.first_write}}{{form.first_write.error}}</div>
                     {# 添付ファイル #}
-                    <div class="py-2">{{form.attachment1.label}}{{form.attachment1}}{{form.attachment1.errors}}</div>
-                    <div class="py-2">{{form.attachment2.label}}{{form.attachment2}}{{form.attachment2.errors}}</div>
-                    <div class="py-2">{{form.attachment3.label}}{{form.attachment3}}{{form.attachment3.errors}}</div>
+<!--                    <div class="py-2">{{form.attachment1.label}}{{form.attachment1}}{{form.attachment1.errors}}</div>-->
+<!--                    <div class="py-2">{{form.attachment2.label}}{{form.attachment2}}{{form.attachment2.errors}}</div>-->
+<!--                    <div class="py-2">{{form.attachment3.label}}{{form.attachment3}}{{form.attachment3.errors}}</div>-->
                     <button type="submit" class="btn btn-success btn-lg btn-block">作成する</button>
                     <a href="{% url 'WGB:top' %}">キャンセル</a>
                 </div>
