--- a/templates/thread_list.html
+++ b/templates/thread_list.html
@@ -1,49 +1,54 @@
 {% extends "base.html" %}
 {% block content %}
 {% load custom_tags %}
-<div>
-    <div class="col-md-12">
-        <table class="table table-striped table-bordered table-hover table-condensed table-md">
-            <thead class="thead-light">
-                <tr><th>No</th><th>タイトル</th><th>公開レベル</th><th>作成者</th><th>作成日</th><th>参加</th></tr>
-            </thead>
-            <tbody>
-                {% for thread in threads_list %}
-                <tr class="table-light">
-                    <td>{{thread.thread_no}}</td>
-                    {# 閲覧レベルが非公開以外ならリンク表示 #}
-                    {% if thread.open_level != 0 %}
-                    <td class="col-md-3"><a href="{% url 'WGB:show_thread' thread.thread_no %}">{{thread.thread_title}}</a></td>
-                    {# 非公開でも、メンバーならリンク表示 #}
-                    {% elif thread.open_level == 0 and thread.threadmember_set|find_member_self:user %}
-                    <td class="col-md-3"><a href="{% url 'WGB:show_thread' thread.thread_no %}">{{thread.thread_title}}</a></td>
-                    {% else %}
-                    <td class="col-md-3">{{thread.thread_title}}</td>
-                    {% endif %}
-                    <td class="col-md-2" style="font-size:80%;">{{thread.display_open_level|safe}}</td>
-                    <td class="col-md-2"><img src="{{ thread.display_create_user_icon }}" style="width:30px; height:30px; border:solid 1px #ffffff; border-radius: 3px;">{{thread.display_create_user}}</td>
-                    <td class="col-md-2" style="font-size:70%;">{{thread.create_date}}</td>
-                    <td class="col-md-2">
-                    {# ログインしており、メンバーでなければボタン表示 #}
-                    {% if user.is_authenticated %}
-                        {% if not thread.threadmember_set|find_member_self:user %}
-                            <form action="{% url 'WGB:join_member' %}" method="post">
-                                {% csrf_token %}
-                                <span>参加パスワード</span><input type="password" name="password"/>
-                                <button type="submit" class="btn btn-info">参加する</button>
-                                <input type="hidden" name="thread_no" value="{{thread.thread_no}}">
-                            </form>
-                        {% else %}
-                            参加済
-                        {% endif %}
-                    {% else %}
-                        －
-                    {% endif %}
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-</div>
+        <div class="jumbotron">
+            <h1 class="display-3">WGB</h1>
+            <p class="lead">人狼掲示板 <span style="font-size:10px;">アルファルファ(超α)版</span>　トップページ</p>
+        </div>
+        <div class="row">
+            <div class="col-2 col-md-1 border-bottom border-right bg-info">No</div>
+            <div class="col-6 col-md-4 border-bottom border-right bg-info">タイトル</div>
+            <div class="col-4 col-md-2 border-bottom border-right bg-info">公開レベル</div>
+            <div class="col-4 col-md-2 border-bottom border-right bg-info">最終更新者</div>
+            <div class="col-4 col-md-2 border-bottom border-right bg-info">最終更新日時</div>
+            <div class="col-4 col-md-1 border-bottom border-right bg-info">参加</div>
+        </div>
+        {% for thread in threads_list %}
+            {% if forloop.counter0|divisibleby:"2" %}
+        <div class="row bg-write">
+            {% else %}
+        <div class="row bg-light">
+            {% endif %}
+            <div class="col-2 col-md-1 border-bottom border-right">{{thread.thread_no}}</div>
+            {# 閲覧レベルが非公開以外ならリンク表示 #}
+            {% if thread.open_level != 0 %}
+            <div class="col-6 col-md-4 border-bottom border-right"><a href="{% url 'WGB:show_thread' thread.thread_no %}">{{thread.thread_title}}</a></div>
+            {# 非公開でも、メンバーならリンク表示 #}
+            {% elif thread.open_level == 0 and thread.threadmember_set|find_member_self:user %}
+            <div class="col-4 col-md-2 border-bottom border-right"><a href="{% url 'WGB:show_thread' thread.thread_no %}">{{thread.thread_title}}</a></div>
+            {% else %}
+            <div class="col-4 col-md-2 border-bottom border-right">{{thread.thread_title}}</div>
+            {% endif %}
+            <div class="col-4 col-md-2 border-bottom border-right" title="{{open_level_discription.0}}">{{thread.display_open_level|safe}}</div>
+            <div class="col-4 col-md-2 border-bottom border-right"><img src="{{ thread.display_last_update_user_icon }}" style="width:20px; height:20px; border:solid 1px #ffffff; border-radius: 3px;">{{thread.display_last_update_user}}</div>
+            <div class="col-4 col-md-2 border-bottom border-right"><small>{{thread.display_last_update_datetime}}</small></div>
+            <div class="col-4 col-md-1 border-bottom border-right">
+            {# ログインしており、メンバーでなければボタン表示 #}
+            {% if user.is_authenticated %}
+                {% if not thread.threadmember_set|find_member_self:user %}
+                    <form action="{% url 'WGB:join_member' %}" method="post">
+                        {% csrf_token %}
+                        <span>参加パスワード</span><input type="password" name="password"/>
+                        <button type="submit" class="btn btn-info">参加する</button>
+                        <input type="hidden" name="thread_no" value="{{thread.thread_no}}">
+                    </form>
+                {% else %}
+                    参加済
+                {% endif %}
+            {% else %}
+                －
+            {% endif %}
+            </div>
+        </div>
+        {% endfor %}
 {% endblock %}
