--- a/templates/thread.html
+++ b/templates/thread.html
@@ -78,6 +78,7 @@
                     {% csrf_token %}
                     <div class="card">
                         <div class="card-body">
+                            <div class="card-subtitle">参加メンバーは掲示板に書き込みできます。</div>
                             <span>参加パスワード</span><input type="password" name="password"/>
                             <button type="submit" class="btn btn-info">参加する</button>
                             <input type="hidden" name="thread_no" value="{{thread.thread_no}}">
